--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -44,9 +44,7 @@
 <div class="social-container">
   <h1>SOCIAL MEDIA</h1>
   <ul class="social-icons">
-    <li><a href="https://www.facebook.com/WaterlooiGEM/"><i class="fa fa-facebook"></i></a></li>
-    <li><a href="https://twitter.com/waterloo_igem"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="https://www.instagram.com/waterloo.igem/"><i class="fa fa-instagram"></i></a></li>
-    <li><a href="https://github.com/igem-waterloo"><i class="fa fa-github"></i></a></li>
+    <li><a href="https://www.facebook.com/WaterlooiGEM/"><i class="fa fa-facebook"></i></a></li><li><a href="https://twitter.com/waterloo_igem"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="https://www.instagram.com/waterloo.igem/"><i class="fa fa-instagram"></i></a></li><li><a href="https://github.com/igem-waterloo"><i class="fa fa-github"></i></a></li>
   </ul>
 </div>
