--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -12,7 +12,7 @@
       <li><a href="/Model.html">Model</a></li>
       <li><a href="/Measurement.html">Measurement</a></li>
       <li><a href="/Implementation.html">Implementation</a></li>
-      <li><a href="/Proof_Of_Concept.html">Proof of concept</a></li>
+      <li><a href="/Proof_Of_Concept.html">Proof of Concept</a></li>
     </ul>
   </div>
   <div class="linkcol">
@@ -28,7 +28,7 @@
     <ul>
       <li><a href="/Human_Practices.html">Human Practices</a></li>
       <li><a href="/Education.html">Education</a></li>
-      <li><a href="/Excellence.html">Excellence</a></li>
+      <li><a href="/Inclusion.html">Inclusion</a></li>
     </ul>
   </div>
   <div class="linkcol">
