--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -5,18 +5,18 @@
   <ul>
     <li id="home"><a href="/index.html">HOME</a></li>
     <li id="project">
-      <a href="#">PROJECT</a>
+      <a>PROJECT</a>
       <ul>
         <li><a href="/Description.html">Description</a></li>
         <li><a href="/Engineering.html">Engineering</a></li>
         <li><a href="/Model.html">Model</a></li>
         <li><a href="/Measurement.html">Measurement</a></li>
         <li><a href="/Implementation.html">Implementation</a></li>
-        <li><a href="/Proof_Of_Concept.html">Proof of concept</a></li>
+        <li><a href="/Proof_Of_Concept.html">Proof of Concept</a></li>
       </ul>
     </li>
     <li id="parts">
-      <a href="#">PARTS</a>
+      <a>PARTS</a>
       <ul>
         <li><a href="/Parts.html">Parts</a></li>
         <li><a href="/Contribution.html">Contribution</a></li>
@@ -24,15 +24,15 @@
       </ul>
     </li>
     <li id="hp">
-      <a href="#">HUMAN PRACTICES</a>
+      <a>HUMAN PRACTICES</a>
       <ul>
         <li><a href="/Human_Practices.html">Human Practices</a></li>
         <li><a href="/Education.html">Education</a></li>
-        <li><a href="/Excellence.html">Excellence</a></li>
+        <li><a href="/Inclusion.html">Inclusion</a></li>
       </ul>
     </li>
     <li id="team">
-      <a href="#">TEAM</a>
+      <a>TEAM</a>
       <ul>
         <li><a href="/Team.html">Members</a></li>
         <li><a href="/Attributions.html">Attributions</a></li>
