--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -731,9 +731,10 @@ header {
           }
 
           header #navbar ul li a:not(:only-child):after, header #navbar ul li a:visited:not(:only-child):after {
-            padding-right: 8px;
-            content: ' ⌃ '; 
-            transform: rotate(180deg);
+            padding-top: 8px;
+            content: ' \2039 '; 
+            font-size: 24px;
+            transform: rotate(270deg);
             color: #FB9E36;}
         header #navbar ul li ul {
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
