--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1384,21 +1384,19 @@ li::before {
   right: 0 !important;
   text-align: center !important;
   cursor: pointer !important;
+  color: #fff !important;
+  background-color: #fd9756 !important;
+  border-radius: 40px !important;
+  font-weight: 700 !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3vw;
 }
 
 #learnmore > img {
   padding: 0 1em !important;
   width: 65%;
-}
-
-.centered {
-  position: absolute !important;
-  top: 50% !important;
-  left: 50% !important;
-  transform: translate(-50%, -50%) !important;
-  font-weight: 700 !important;
-  color: #fff !important;
-  font-size: clamp(0.38rem, 0.2rem + 1.4vw, 3rem) !important;
 }
 
 .text {
